--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -15,7 +15,7 @@
     <aside>
         <img src="{% static 'main/img/logo.png' %}" alt="Logo">
         <span class="logo">Site</span>
-        <h3>Навигация</h3>
+        <h3>Навигация:</h3>
         <ul>
             <a href="{% url 'home' %}"><li><i class="fa fa-home" aria-hidden="true"></i> Главная</li></a>
             <a href="{% url 'about' %}"><li><i class="fa fa-address-book" aria-hidden="true"></i> Про нас</li></a>
