--- a/website/templates/news/news_home.html
+++ b/website/templates/news/news_home.html
@@ -4,12 +4,13 @@
 
 {% block content %}
     <div class="features">
-        <h1 id="news_home">Новости на сайте</h1>
+        <h1 id="news_home">Новости:</h1>
         {% if news %}
             {% for el in news %}
                 <div class="alert alert-warning">
                     <h3>{{ el.title }}</h3>
                     <p>{{ el.anons }}</p>
+                    <a href="{% url 'news-detail' el.id %}" class="btn btn-warning">Читать статью</a>
                 </div>
             {% endfor %}
         {% else %}
