--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -14,7 +14,7 @@
 <body>
     <aside>
         <img src="{% static 'main/img/logo.png' %}" alt="Logo">
-        <span class="logo">Site</span>
+        <span class="logo">News</span>
         <h3>Навигация:</h3>
         <ul>
             <a href="{% url 'home' %}"><li><i class="fa fa-home" aria-hidden="true"></i> Главная</li></a>
