--- a/website/templates/news/news_home.html
+++ b/website/templates/news/news_home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="features">
-        <h1 id="news_home">Новости:</h1>
+        <h1 id="news">Новости:</h1>
         {% if news %}
             {% for el in news %}
                 <div class="alert alert-warning">
