--- a/website/static/main/css/main.css
+++ b/website/static/main/css/main.css
@@ -51,7 +51,7 @@ aside ul li:hover, aside ul a:hover {
 main .features {
     float: left;
     color: #fff;
-    margin-top: 100px;
+    margin-top: 40px;
     text-align: center;
     width: 75%;
 }
@@ -60,7 +60,7 @@ main .features h1 {
     font-size: 50px;
 }
 
-main .features h1#news_home {
+main .features h1#news {
     font-size: 50px;
     margin: 0 34%;
     float: left;
