--- a/website/templates/news/create.html
+++ b/website/templates/news/create.html
@@ -4,7 +4,9 @@
 
 {% block content %}
     <div class="features">
-        <h1>Форма по добавлению статьи</h1>
+        {% block h1 %}
+            <h1>Форма по добавлению статьи</h1>
+        {% endblock %}
         <form method="post">
             {% csrf_token %}
 
@@ -12,7 +14,9 @@
             {{ form.anons }}<br>
             {{ form.full_text }}<br>
             {{ form.date }}<br>
-            <button class="btn btn-success" type="submit">Добавить статью</button><br><br>
+            {% block btn %}
+                <button class="btn btn-success" type="submit">Добавить статью</button><br><br>
+            {% endblock %}
             <span>{{ error }}</span><br>
 
         </form>
