--- a/website/templates/news/detail_view.html
+++ b/website/templates/news/detail_view.html
@@ -8,7 +8,10 @@
             <h3>{{ article.title }}</h3>
             <p>{{ article.date }}</p>
             <p>{{ article.full_text }}</p>
-            <a href="{% url 'news_home' %}"><button class="btn btn-warning">Все новости</button></a>
         </div>
+        <a href="{% url 'news_home' %}"><button class="btn btn-warning">Все новости</button></a>
+        <a href="{% url 'news-update' article.id %}"><button class="btn btn-info">Обновить новость</button></a>
+        <a href="{% url 'news-delete' article.id %}"><button class="btn btn-danger">Удалить новость</button></a>
     </div>
+
 {% endblock %}
